Don't crash (sporadically) when openning the color scheme menu.

BUG: 412455
FIXED-IN: 2.8